# rand-murmur3

./: Cargo.toml  readme.org
benches/: throughput.rs
src/: lib.rs  mixer32.rs  mixer64.rs
